Remove 5 round logic and text on the page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rock Paper Scissors</title>
   </head>
-  <body style="background-color: black">
-    <p style="font-size: 24px; color: white">ROCK-PAPER-SCISSORS</p>
-    <p style="font-size: 24px; color: white">
-      Open the console to know what's going on.
-    </p>
-    <p style="font-size: 24px; color: white">
-      If you pick nothing, you get your move chosen for you.
-    </p>
+  <body>
     <script src="script.js"></script>
   </body>
 </html>
