--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <h1>ROCK PAPER SCISSORS</h1>
+    <p>Click one of the buttons below to choose:</p>
     <script src="script.js"></script>
   </body>
 </html>
