Add buttons div and choice buttons

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   <body>
     <h1>ROCK PAPER SCISSORS</h1>
     <p>Click one of the buttons below to choose:</p>
+    <div id="buttons">
+      <button id="rock-btn">ROCK 👊</button>
+      <button id="paper-btn">PAPER ✋</button>
+      <button id="scissors-btn">SCISSORS ✌</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
