Add scores and result divs

--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
       <button id="paper-btn">PAPER ✋</button>
       <button id="scissors-btn">SCISSORS ✌</button>
     </div>
+    <div id="scores">
+      <p>Your Score<br /><span>5</span></p>
+      <p>Computer's Score: <br /><span>3</span></p>
+    </div>
+    <div id="result"></div>
     <script src="script.js"></script>
   </body>
 </html>
