--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
       <button id="scissors-btn">SCISSORS ✌</button>
     </div>
     <div id="scores">
-      <p>Your Score<br /><span>5</span></p>
-      <p>Computer's Score: <br /><span>3</span></p>
+      <p>Your Score: <br /><span id="player-score"></span></p>
+      <p>Computer's Score: <br /><span id="comp-score"></span></p>
     </div>
     <div id="result"></div>
     <script src="script.js"></script>
