Add play again button and hide it in CSS

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <button id="rock-btn">ROCK 👊</button>
       <button id="paper-btn">PAPER ✋</button>
       <button id="scissors-btn">SCISSORS ✌</button>
+      <button id="play-again">PLAY AGAIN?</button>
     </div>
     <div id="scores">
       <p>Your Score: <br /><span id="player-score"></span></p>
