--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>ROCK PAPER SCISSORS</h1>
-    <p>Click one of the buttons below to choose:</p>
+    <p id="underheader">Click one of the buttons below to choose:</p>
     <div id="buttons">
       <button id="rock-btn">ROCK 👊</button>
       <button id="paper-btn">PAPER ✋</button>
@@ -16,8 +16,8 @@
       <button id="play-again">PLAY AGAIN?</button>
     </div>
     <div id="scores">
-      <p>Your Score: <br /><span id="player-score"></span></p>
-      <p>Computer's Score: <br /><span id="comp-score"></span></p>
+      <p>Your Score: <span id="player-score"></span></p>
+      <p>Computer's Score: <span id="comp-score"></span></p>
     </div>
     <div id="result"></div>
     <script src="script.js"></script>
