--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <button id="play-again">PLAY AGAIN?</button>
     </div>
     <div id="scores">
-      <p>Your Score: <span id="player-score"></span></p>
-      <p>Computer's Score: <span id="comp-score"></span></p>
+      <p>Your Score: <span id="player-score">0</span></p>
+      <p>Computer's Score: <span id="comp-score">0</span></p>
     </div>
     <div id="result"></div>
     <script src="script.js"></script>
