--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <h1>ROCK PAPER SCISSORS</h1>
     <p id="underheader">Click one of the buttons below to choose:</p>
     <div id="buttons">
-      <button id="rock-btn">ROCK 👊</button>
-      <button id="paper-btn">PAPER ✋</button>
-      <button id="scissors-btn">SCISSORS ✌</button>
+      <button id="rock">ROCK 👊</button>
+      <button id="paper">PAPER ✋</button>
+      <button id="scissors">SCISSORS ✌</button>
       <button id="play-again">PLAY AGAIN?</button>
     </div>
     <div id="scores">
       <p>Your Score: <span id="player-score">0</span></p>
       <p>Computer's Score: <span id="comp-score">0</span></p>
+      <br />
+      <p>Your Choice: <span id="player-choice">N/A</span></p>
+      <p>Computer Choice: <span id="comp-choice">N/A</span></p>
     </div>
     <div id="result"></div>
     <script src="script.js"></script>
