Add 's in the Computer Choice paragraph

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       <p>Computer's Score: <span id="comp-score">0</span></p>
       <br />
       <p>Your Choice: <span id="player-choice">N/A</span></p>
-      <p>Computer Choice: <span id="comp-choice">N/A</span></p>
+      <p>Computer's Choice: <span id="comp-choice">N/A</span></p>
     </div>
     <div id="result"></div>
     <script src="script.js"></script>
