--- a/index.html
+++ b/index.html
@@ -7,22 +7,24 @@
     <title>Rock Paper Scissors</title>
   </head>
   <body>
-    <h1>ROCK PAPER SCISSORS</h1>
-    <p id="underheader">Click one of the buttons below to choose:</p>
-    <div id="buttons">
-      <button id="rock">ROCK 👊</button>
-      <button id="paper">PAPER ✋</button>
-      <button id="scissors">SCISSORS ✌</button>
-      <button id="play-again">PLAY AGAIN?</button>
+    <div id="game-container">
+      <h1>ROCK PAPER SCISSORS</h1>
+      <p id="underheader">Click one of the buttons below to choose:</p>
+      <div id="buttons">
+        <button id="rock">ROCK 👊</button>
+        <button id="paper">PAPER ✋</button>
+        <button id="scissors">SCISSORS ✌</button>
+        <button id="play-again">PLAY AGAIN?</button>
+      </div>
+      <div id="scores">
+        <p>Your Score: <span id="player-score">0</span></p>
+        <p>Computer's Score: <span id="comp-score">0</span></p>
+        <br />
+        <p>Your Choice: <span id="player-choice">N/A</span></p>
+        <p>Computer's Choice: <span id="comp-choice">N/A</span></p>
+      </div>
+      <div id="result"></div>
     </div>
-    <div id="scores">
-      <p>Your Score: <span id="player-score">0</span></p>
-      <p>Computer's Score: <span id="comp-score">0</span></p>
-      <br />
-      <p>Your Choice: <span id="player-choice">N/A</span></p>
-      <p>Computer's Choice: <span id="comp-choice">N/A</span></p>
-    </div>
-    <div id="result"></div>
     <script src="script.js"></script>
   </body>
 </html>
